# FluidScripten

./: CMakeLists.txt
src/: FluidApplication.cpp  FluidApplication.hpp  main.cpp
src/application/: Application.cpp  Application.hpp
src/graphics/: ShaderProgram.cpp  ShaderProgram.hpp
src/simulation/: Simulation.hpp  Simulation.ipp
